--- a/app/views/layout/_prepend.html.erb
+++ b/app/views/layout/_prepend.html.erb
@@ -14,7 +14,7 @@
     <%= stylesheet_link_tag 'appraisals', :plugin => 'redmine_tpa' %>
     <%= stylesheet_link_tag 'appraisals_questions', :plugin => 'redmine_tpa' %>
     <%= stylesheet_link_tag 'select2', :plugin => 'redmine_tpa' %>
-    <%= javascript_include_tag 'select2.min', :plugin => 'redmine_tpa' %>
+    <%= javascript_include_tag 'select2', :plugin => 'redmine_tpa' %>
     <%= javascript_include_tag 'bootstrap.min', :plugin => 'redmine_tpa' %>
     <%= javascript_include_tag 'appraisals_templates', :plugin => 'redmine_tpa' %>
     <%= javascript_include_tag 'appraisals', :plugin => 'redmine_tpa' %>
