--- a/app/views/hooks/redmine_tpa/_view_issues_form_details_bottom.html.erb
+++ b/app/views/hooks/redmine_tpa/_view_issues_form_details_bottom.html.erb
@@ -2,7 +2,7 @@
 <p><strong><%= t('redmine_tpa') %></strong></p>
 <%= stylesheet_link_tag 'bootstrap-grid', :plugin => 'redmine_tpa' %>
 <%= stylesheet_link_tag 'select2', :plugin => 'redmine_tpa' %>
-<%= javascript_include_tag 'select2.min', :plugin => 'redmine_tpa' %>
+<%= javascript_include_tag 'select2', :plugin => 'redmine_tpa' %>
 <%= stylesheet_link_tag 'font-awesome.min', :plugin => 'redmine_tpa' %>
 <%= stylesheet_link_tag 'redmine_tpa', :plugin => 'redmine_tpa' %>
 <%= javascript_include_tag 'redmine_tpa', :plugin => 'redmine_tpa' %>
