--- a/app/views/tpa_tags/_tag_create_form.html.erb
+++ b/app/views/tpa_tags/_tag_create_form.html.erb
@@ -1,9 +1,9 @@
 <%= form_for TpaTag.new, remote: true do |f| %>
-	<%= f.hidden_field :appraisal_question_option_id, value: @tpa_tag.appraisal_question_option_id %>
-	<%= f.hidden_field :appraisal_id, value: @tpa_tag.appraisal.id %>
+	<%= f.hidden_field :appraisal_question_option_id, value: appraisal_question_option.id %>
+	<%= f.hidden_field :appraisal_id, value: appraisal.id %>
 	<%= f.hidden_field :user_id, value: User.current.id %>
 	<%= button_tag type: 'submit', 
 		style: "color: #ccc" do %>
 			<%=  "<i class='fa fa-tag'></i>".html_safe %>
 	<% end %>
-<% end %> <%=  @tpa_tag.appraisal_question_option.content %><br/>
+<% end %> <%=  appraisal_question_option.content %><br/>
