--- a/app/views/tpa_tags/destroy.js.erb
+++ b/app/views/tpa_tags/destroy.js.erb
@@ -1,5 +1,5 @@
 <% unless @tpa_tag.errors.any? %>
-	$("#appraisal-<%=@tpa_tag.appraisal_id%>-appraisal-question-option-<%=@tpa_tag.appraisal_question_option_id%>-tag-form").html("<%= escape_javascript(render partial: 'tag_create_form')%>");
+	$("#appraisal-<%=@tpa_tag.appraisal_id%>-appraisal-question-option-<%=@tpa_tag.appraisal_question_option_id%>-tag-form").html("<%= escape_javascript(render partial: 'tag_create_form', locals: {appraisal_question_option: @tpa_tag.appraisal_question_option, appraisal: @tpa_tag.appraisal})%>");
 <% else %>
 	alert('ERROR')
 <% end %>
