--- a/app/views/hooks/redmine_tpa/_view_issues_form_details_bottom.html.erb
+++ b/app/views/hooks/redmine_tpa/_view_issues_form_details_bottom.html.erb
@@ -11,7 +11,7 @@
 <div id="tag-for-pa">
 	<div class="row-fluid">
 		<div class="col-md-12" id="appraisals">
-		<%= select_tag 'appraisal_id_select', options_from_collection_for_select(Appraisal.joins(:appraisees).where('appraisal_appraisees.user_id = ?', User.current.id), :id, :template_name_and_appraisers), prompt: t('helpers.select.prompt'), class: 'select2-local', style: 'width: 100%;' %>
+		<%= select_tag 'appraisal_id_select', options_from_collection_for_select(Appraisal.joins(:appraisees).where('appraisal_appraisees.user_id = ?', User.current.id), :id, :template_name_and_appraisers), prompt: t('helpers.select.prompt'), class: 'select2-local appraisal_id_select', id: issue.id, style: 'width: 100%;' %>
 		</div>
 		<div class="col-md-12" id="questions-and-options"></div>
 	</div>
