--- a/app/views/tpa_tags/_tag_destroy_form.html.erb
+++ b/app/views/tpa_tags/_tag_destroy_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for tpa_tag, method: :delete, remote: true do |f| %>
-    <%= button_tag type: 'submit', style: "color: #337ab7" do %>
+<%= form_for [tpa_tag.appraisal, tpa_tag.appraisee, tpa_tag], method: :delete, remote: true do |f| %>
+    <%= button_tag type: 'submit', style: "color: #337ab7", class: 'tpa-button' do %>
         <%=  "<i class='fa fa-tag'></i>".html_safe %>
     <% end %>
 <% end %> <%= tpa_tag.appraisal_question_option.content %><br/>
