--- a/app/views/appraisals/_appraiser_select2_config.html.erb
+++ b/app/views/appraisals/_appraiser_select2_config.html.erb
@@ -22,7 +22,8 @@
 						return {
 							q: term,
 							page_limit: 10,
-							page: page
+							page: page,
+							user_logged: <%=User.current.logged?%>
 						};
 					},
 					results: function (data, page) {
