--- a/app/views/appraisals/show.html.erb
+++ b/app/views/appraisals/show.html.erb
@@ -28,6 +28,10 @@
       <% end %>     
     <% end %>
   </dd>
+
+  <dt><strong><%= t('appraisal_appraiser_note') %>:</strong></dt>
+  <dd><%= @appraisal.appraiser_note %></dd>
+
 </dl>
 
 <div class="form-actions">
