--- a/app/views/appraisals/_form.html.erb
+++ b/app/views/appraisals/_form.html.erb
@@ -45,11 +45,23 @@
     <div class="form-group">
       <%= f.label t('appraisal_end_date'), :class => 'col-sm-2 control-label' %>
       <div class="col-sm-4">
-        <%= f.text_field :end_date, :class => 'form-control datepicker' %>
+        <%= f.text_field :end_date, :class => 'form-control' %>
         <span class="span-danger"><%= display_errors(f.object, :end_date) %></span> 
       </div>    
+      <div class="col-sm-1">
+        <%= calendar_for('appraisal_end_date') %>
+      </div>    
+
     </div>
 
+    <legend><%= t('appraisal_other_info') %></legend>
+    <div class="form-group">
+      <%= f.label t('appraisal_appraiser_note'), :class => 'col-sm-2 control-label' %>
+      <div class="col-sm-10">
+        <%= f.text_area :appraiser_note, :class => 'form-control text_area', style: "width: 100%;" %>
+        <span class="span-danger"><%= display_errors(f.object, :appraiser_note) %></span> 
+      </div>
+    </div>
 
     <div class="form-actions">
       <%= f.submit nil, :class => 'btn btn-primary' %>
