--- a/app/views/appraisals/show.html.erb
+++ b/app/views/appraisals/show.html.erb
@@ -29,8 +29,8 @@
     <% end %>
   </dd>
 
-  <dt><strong><%= t('appraisal_appraiser_note') %>:</strong></dt>
-  <dd><%= @appraisal.appraiser_note %></dd>
+  <dt><strong><%= t('appraisal_appraisers_note') %>:</strong></dt>
+  <dd><%= @appraisal.appraisers_note %></dd>
 
 </dl>
 
