--- a/app/views/layout/_prepend.html.erb
+++ b/app/views/layout/_prepend.html.erb
@@ -20,6 +20,7 @@
     <%= javascript_include_tag 'appraisals_templates', :plugin => 'redmine_tpa' %>
     <%= javascript_include_tag 'appraisals', :plugin => 'redmine_tpa' %>
     <%= javascript_include_tag 'redmine_tpa', :plugin => 'redmine_tpa' %>
+    <%= javascript_include_tag 'highcharts', :plugin => 'redmine_tpa' %>
 <% end %>
 
 <h3 class="tpa-page-title"><%=title_for_tpa%></h3>
