--- a/app/views/tpa_tags/index.html.erb
+++ b/app/views/tpa_tags/index.html.erb
@@ -1,4 +1,5 @@
 <%= render 'layout/prepend' %>
+
 <dl class="dl-horizontal">
   <dt><strong><%= t('appraisal_appraisee') %>:</strong></dt>
   <dd><%= User.find(params[:user_id]) %></dd>
@@ -9,30 +10,20 @@
       <i class="fa fa-angle-double-right"></i> <%= u.login %> - <%= u.name %><br/>
     <% end %>
   </dd>
-
-  <dt><strong><%= t('tags') %>:</strong></dt>
-  <% @appraisal.appraisal.appraisal_questions.each do |aq| %>
-  <dt class="appraisal-lists tag-dt"><i class="fa fa-angle-double-right"></i> <strong><%= aq.content %>:</strong></dt>
-    <dd class="appraisal-lists tag-dd">
-      <% aq.appraisal_question_options.each do |qo| %>
-        <span class='qo-content'><i class="fa fa-angle-right"></i> <%= qo.content %><br/></span>
-        <% tpa_tags = TpaTag.where('appraisal_id = ? and user_id = ? and appraisal_question_option_id = ?', @appraisal.id, User.find(params[:user_id]).id, qo.id) %>
-		<% if tpa_tags.any? %>
-	        <% tpa_tags.each do |tag| %>
-	        	<span class="tag-view"><i class="fa fa-tag tag-icon"></i> <%= "#{tag.issue.tracker.name} ##{tag.issue.id}:" %> <%= link_to "#{tag.issue.subject}", issue_path(tag.issue) %></span><br/>
-	        <% end %>			
-		<% else %>
-			<span class="tag-view"><i class="fa fa-close no-tags-icon"></i> <%= t('no_tags_found') %></span><br/>			
-		<% end %>
-	    <br/>
-      <% end %>
-    </dd>
-  <% end %>
-
-<div class="form-actions">
-	<%= link_to t('.back', :default => t("helpers.links.back")),
-	              appraisal_path(@appraisal), :class => 'btn btn-default'  %>
-</div>
-
 </dl>
+
+<div role="tabpanel">
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab"><%= t('tags_list') %></a></li>
+    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><%=t('tags_graphs')%></a></li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane active" id="home"><br/><%= render :partial => 'tags_list' %></div>
+    <div role="tabpanel" class="tab-pane" id="profile"><br/><%= render :partial => 'tags_graphs' %></div>
+  </div>
+
+</div>
 <%= render partial: 'layout/append', locals: {bomb_text: t('helpers.links.reading'), bomb_icon: :eye} %>
