Bar Graph label change

--- a/app/views/tpa_tags/_tags_graphs.html.erb
+++ b/app/views/tpa_tags/_tags_graphs.html.erb
@@ -42,7 +42,7 @@ $(function () {
             }
         },
         series: [{
-            name: "<%=t('appraisal_question_content').pluralize%>",
+            name: "<%=t('tags')%>",
             data: [<%=raw @tpa_tags.map{|tag| tag.tags_count}.map(&:inspect).join(', ').gsub('"','')%>]
         }
 
