Active links change

--- a/app/views/layout/_prepend.html.erb
+++ b/app/views/layout/_prepend.html.erb
@@ -30,7 +30,7 @@
 	<div class="col-md-2 sidebar left">
 		<ul class="nav nav-sidebar">
 			<li><%= active_link_to "<span class='tpa-left-menu-icon'><i class='fa fa-paper-plane'></i></span> #{t('appraisals')}".html_safe, appraisals_path, active: [["appraisals","tpa_tags"],[]] %></li>
-			<li><%= active_link_to "<span class='tpa-left-menu-icon'><i class='fa fa-file'></i></span> #{t('appraisals_templates')}".html_safe, appraisals_templates_path, active: [["appraisals_templates"],["show","index"]] %></li>
+			<li><%= active_link_to "<span class='tpa-left-menu-icon'><i class='fa fa-file'></i></span> #{t('appraisals_templates')}".html_safe, appraisals_templates_path, active: [["appraisals_templates"],[]] %></li>
 		</ul>
 	</div>
 	<div class="col-md-8 tpa-content">
