--- a/app/views/appraisals/_appraisees_select2_config.html.erb
+++ b/app/views/appraisals/_appraisees_select2_config.html.erb
@@ -16,7 +16,7 @@
 				placeholder: "<%=t('appraisal_appraisees')%>",
 				multiple: true,
 				ajax: {
-					url: '/appraisal_appraisees.json',
+					url: '/appraisal_appraisees',
 					dataType: 'json',
 					data: function (term, page) {
 						return {
