--- a/app/views/appraisals/_appraiser_select2_config.html.erb
+++ b/app/views/appraisals/_appraiser_select2_config.html.erb
@@ -16,7 +16,7 @@
 				placeholder: "<%=t('appraisal_appraisers')%>",
 				multiple: true,
 				ajax: {
-					url: '/appraisal_appraisers.json',
+					url: '/appraisal_appraisers',
 					dataType: 'json',
 					data: function (term, page) {
 						return {
